--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,68 @@
 # Environment
 .env
 *.env
+.env.*
 
 # Python
 __pycache__/
 *.py[cod]
 *.pyo
+*.pyd
 .venv/
+.venv*/
 venv/
+env/
+.Python
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Virtual environments (any pattern)
+.venv311/
+.venv*/
+
+# Large Model Files (Vosk, MediaPipe, etc.)
+vosk-model-*/
+*.task
+*.onnx
+*.tflite
+models/
 
 # Notes (local data)
 *.txt
 
+# Logs
+*.log
+logs/
+
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
 Thumbs.db
+Desktop.ini
+.directory
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Jupyter Notebooks
+.ipynb_checkpoints/
+
+# Temp files
+*.tmp
+*.temp
+*.bak
