Expand system, social intents and tools
Add a large set of system and social capabilities: new system tool modules (airplane_mode, audio_device, battery, clipboard, disk, display, hotspot, nightlight, power, printer, processes, screenshot, trash, wifi), Instagram and YouTube control tools, a datetime tool, and conversation_memory. Update intent classification (intent_model) with many rules for Instagram, screenshots, clipboard, battery, wifi, power, datetime, YouTube controls, hotspot/nightlight/airplane/display/audio/printer/trash/disk/processes and related phrases. Expand intents.json and allowed intent registry to declare new intents/entities. Adjust core handling (ankita_core) to pass user_text into instagram intents and treat datetime/instagram/system tools as deterministic responses; extend text heuristics for system actions. Add .gitignore entries for runtime/local memory artifacts and update various memory JSON fixtures. Update planner to map system intent suffixes to specific tool actions (partial mapping added).

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,28 @@ htmlcov/
 *.tmp
 *.temp
 *.bak
+# Runtime app data (local machine state)
+ankita/data/instagram/browser_data/
+ankita/data/instagram/session.json
+
+# Local memory artifacts
+ankita/memory/embeddings.npy
+ankita/memory/owner_voice.npy
+ankita/memory/conversations.json
+ankita/memory/episodes.json
+ankita/memory/ltm.json
+ankita/memory/notes.json
+ankita/memory/preferences.json
+ankita/memory/semantic.json
+ankita/memory/user_preferences.json
+
+# Nested package local memory artifacts
+ankita/ankita/memory/embeddings.npy
+ankita/ankita/memory/memory.json
+ankita/ankita/memory/semantic.json
+
+# Scheduler runtime state
+ankita/scheduler/jobs.json
+ankita/tools/scheduler/jobs.json
+ankita/ankita/scheduler/jobs.json
+ankita/ankita/tools/scheduler/jobs.json
